--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@etchteam/next-pagination": "^3.5.3",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "classnames": "^2.3.1",
     "eslint-config-airbnb": "^19.0.4",
