--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.1.5",
     "next-images": "^1.8.4",
     "react": "18.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.15.1",
